Fixed menu on small viewport

--- a/assets/css/_partial/header.scss
+++ b/assets/css/_partial/header.scss
@@ -100,14 +100,14 @@ header:hover {
         right: 1rem;
       }
     }
-    ul.responsive {
+    ul.open {
       li {
         display: block;
       }
     
       li:not(:first-child) {
         padding-top: 1rem;
-        padding-left: logo-width + 20px;
+        padding-left: $logo-width + 20px;
         font-size: 1rem;
       }
     }
